Se eliminan clases innecesarias y se crean paquetes para el modulo de trafico y utilidades.